--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "nodemon": "^3.0.2",
@@ -22,6 +23,7 @@
     "@prisma/client": "^5.7.0",
     "@trpc/client": "^10.44.1",
     "@trpc/server": "^10.44.1",
+    "bcrypt": "^5.1.1",
     "expres": "^0.0.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
